--- a/public/files/css/base.css
+++ b/public/files/css/base.css
@@ -5,3 +5,25 @@ body {
 .radius95 {
     border-radius: 0.95rem!important;
 }
+
+.fs-7 {
+    font-size: 0.85rem !important;
+}
+
+/* Overlay */
+#load {
+    display: none;
+    background-color: rgba(0,0,0,0.50);
+    color: #fff;
+    cursor: wait;
+    font-size: x-small;
+    font-weight: bold;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+}
